--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -1,85 +1,34 @@
 @use "./variables";
 
-.contactMainContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+.contactForm .input {
+  display: inline-block;
 
 }
 
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 
-.contactForm input, textarea [type=text] {
-  box-sizing: border-box;
-  width: 200px;
-  padding: 10px;
-  border: 0;
-  border-bottom: 1px solid #666;
-
-  margin: 12px 0 20px;
-
-
-  &::placeholder{
-    font-size: 0.8rem;
-    color: #666;
-    opacity: 1;
-    line-height: 1.2rem;
-   
-  }
-    
-  &:focus {
-    border: 1px solid pink;
-  }
-}
-
-input {
-  border: 1px solid pink;
-}
-
-/*textarea {
-  min-height: 130px;
-  border: 1px solid #eee;
-  border-top: none;
-}*/
-
-
-/*input[type=text] {
-  background-color: lightgray;
-  outline: 0;
-      border-width: 0 0 1px;
-border-color: #333;
-  width: 100%;
-
-  margin: 12px 0 20px;
-  box-sizing: border-box;
-}
-
-::placeholder {
-  font-size: 0.5rem;
-}*/
-
-
-/*option {
-  font-family: $bodyFont, sans-serif;
-}
-
-fieldset {
+.contactForm .input[type=text] {
+ 
   border: none;
-  padding: 0;
-  margin: 10px 0;
+  color: $secondary;
+  background-color: $primary;
+  border-bottom: 1px $secondary solid;
+  font-family: "poppins";
+  font-size: 10px;
+  line-height: 1.5rem;
 
-  label {
-    font-size: 0.8rem;
-  }
 
-  input {
-    margin: 0 10px 0 0;
-    accent-color: pink;
-  }
-}*/
+}
+
+.contactForm .input[type=email] {
+  width: 200px;
+  border: none;
+  color: $secondary;
+  background-color: $primary;
+  border-bottom: 1px $secondary solid;
+  font-family: "poppins";
+  font-size: 10px;
+  line-height: 1.5rem;
+
+
+}
