--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -1,225 +1,157 @@
+@import "./variables";
 
 
 footer {
-  position: relative;
   width: 100%;
-  height: auto;
-  padding: 40px 80px;
-  background: lightgrey;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
- 
-}
+  background: $primary;
+  color: $secondary;
+  margin: 0 auto;
+  padding: 40px 0 40px 0;
+  
 
 
-footer .footerFlexContainer {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  flex-direction: row;
 
 }
 
-footer .footerFlexContainer h2 {
-  position: relative;
-  color: #333;
-  font-size: 30px;
-  font-weight: 500px;
-  margin-bottom: 15px;
+footer h2 {
+  font-size: 16px;
+  font-weight: 500;
+  color: $secondary;
+  margin-bottom: 20px;
+  padding: 0;
+
 }
 
+.footerFlexContainer {
+display: flex;
+justify-content: center;
+align-items: center;
 
-footer .footerFlexContainer .sec {
+}
+
+/*  About  */
+
+.footerAbout {
+  width: 15%;
   margin-right: 30px;
+
 }
 
-footer .footerFlexContainer .sec.footerAbout {
-    width: 40%;
-}
-
-
-
-footer .footerFlexContainer .sec.footerAbout img {
-  position: relative;
+.footerAbout img {
   height: 26px;
   width: 125px;
-  margin-bottom: 15px;
+
 }
 
-footer .footerFlexContainer .sec.footerAbout p {
-
-  color:#333;
+.footerAbout p {
+  font-size: 12px;
+  color: $secondary;
+  margin: 20px 0 20px 0;
+  padding: 0;
+  
 
 }
 
 .icon {
-  margin-top: 20 px;
   display: flex;
 
 }
 
-.icon li a {
-  display: inline-block;
-  height: 10px;
-  width: 10px;
-  background: lightgrey;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 10px;
-  border-radius: 4px;
+.icon a img {
+      height: 10px;
+      width: 100%;
+      margin: 0 15px 0 0; 
 
-
-}
-
-.icon li a:hover {
-  background-color: pink;
-
-}
-
-
-.footerContact {
-  position: relative;
-  width: 25%;
-
-
-}
-
-.footerContact ul li a {
-  color: pink;
-  margin-bottom: 10px;
-
-}
-
-
-.footerContact ul li a:hover {
-  color: magenta;
-  
-}
-
-.footerContact {
-
-  width: calc(35% - 60px);
-  margin-right: 0 !important;
-}
-
-.footerContact .info {
-position: relative;
-
-}
-
-.footerContact .info li {
-  display: flex;
-  margin-bottom: 16px;
-  
   }
 
-  .footerContact .info li span:nth-child(1) {
-    color: peru;
-    font-size: 1rem;
+  span img {
+    height: 10px;
+    width: 10px;
     margin-right: 10px;
 
   }
 
-  .footerContact .info li span {
-    color:#333;
-  }
+  /* Contact*/
 
 
-  .footerContact .info li a {
-    color: #333;
-    text-decoration: none;
-  }
+.footerContact {
+  margin: 20px 0 30px 15px;
+  width: 15%;
 
-  .footerContact .info li a:hover {
-    color: magenta;
-  }
+ 
+}
 
+.footerContact li {
 
-/*nav {
-  display: flex;
-  justify-content: space-between;
-        
-        ul { 
-            width: 33%;
-        
-          a {
-            color: green;
-            font-size: 0.8rem;
-            line-height: 1.5rem;
+  padding-bottom: 8px;
 
-            &:hover {
-              color: magenta;
-
-            &:focus {
-              color: magenta;
-            }
-                        
-          }
-
+        a {
+ 
+  color: $secondary;
+  font-size: 12px;
+  text-decoration: none;
         }
-
-      }
-
-    }
-
-
-.footerAbout li a {
-  display: inline-block
-}
-
-.footerAbout img {
-
-  height: 26px;
-  width: 125px;
-
 }
 
 
+/* Profile  */
 
-.footerContact a img {
-  height: 10px;
-  width: 10px;
+.footerProfile {
+  margin: 20px 0 30px 15px;
+  width: 15%;
 
+}
+
+.footerProfile li {
+  padding-bottom: 8px;
+
+   a {
+ 
+  color: $secondary;
+  font-size: 12px;
+  text-decoration: none;
+
+
+   }
 }
 
 
 
-
-.footerProfile a img {
-  height: 10px;
-  width: 10px;
-
-}
+/*  Newsletter  */
 
 .footerNewsletter {
-  display: flex;
-  flex-direction: column;
-  
-      li{ font-size: 0.5rem;
-
-      }
+  margin: 10px 0 30px 0;
 
 
-
-
-
-
-
-
-
-input[type=text] {
-  background-color: lightgray;
-outline: 0;
-border-width: 0 0 1px;
-border-color: #333;
-  width: 100%;
-
-  margin: 12px 0 20px;
-  box-sizing: border-box;
 }
 
-::placeholder {
-  font-size: 0.5rem;
-}*/
+.footerNewsletter p { 
+  color: $secondary;
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+
+}
+
+  input{
+    margin: 20px 0 20px 0;
+  }
+
+  input[type=text] {
+    width: 200px;
+    border: none;
+    color: $secondary;
+    background-color: $primary;
+    border-bottom: 1px $secondary solid;
+    font-family: "poppins";
+    font-size: 10px;
+    line-height: 1.5rem;
+
+
+  }
+
+
+
+
+
+
