--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -10,9 +10,12 @@ header {
 
         &.contactHeader {
           
-          height: 60vh;
+          height: 30vh;
           background-image: url('./../assets/contact-us.jpg');
-          background-position-y: 40px;
+          background-position: bottom;
+
+
+
 
 
         }
